feat: Update java version from 17 to Java 25 with all dependenceis